--- a/game-of-life/package.json
+++ b/game-of-life/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-fontawesome": "^1.6.1",
-    "react-scripts": "1.1.1"
+    "react-scripts": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -15,6 +15,6 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "react-bootstrap": "^0.32.1"
+    "react-bootstrap": "^0.32.4"
   }
 }
